--- a/O.Bank _ Просто скачай Банк!.html
+++ b/O.Bank _ Просто скачай Банк!.html
@@ -188,8 +188,8 @@
                             <div class="banner-prostoskachaybank">
                               <span>Просто скачай банк</span>
                               <div class="banner-prostoskachaybank-img">
-                                <img src="./O.Bank _ Просто скачай Банк!_files/banner_download-apple.png" alt="">
-                                <img src="./O.Bank _ Просто скачай Банк!_files/banner-download-google.png" alt="">
+                                <a href="https://apple.co/2TibP7Z" target="_blank"><img src="./O.Bank _ Просто скачай Банк!_files/banner_download-apple.png" alt=""></a>
+                                <a href="https://bit.ly/2QKdHoA" target="_blank"><img src="./O.Bank _ Просто скачай Банк!_files/banner-download-google.png" alt=""></a>
                               </div>
                               <img src="./O.Bank _ Просто скачай Банк!_files/logo_banner.png" alt="logo" class="banner-logo">
                             </div>
@@ -203,32 +203,18 @@
                     <div class="content">
                       <div class="layout layout--twocol-bricks">
                         <div class="layout__region layout__region--top">
-
                         </div>
-
-                        <div class="layout__region layout__region--first-above">
-
-                          <div class="field field--name-field-image field--type-image field--label-hidden field__items">
-                            <div class="field__item"> <img src="./O.Bank _ Просто скачай Банк!_files/main_ukr_0.png"
-                                width="1220" height="1360" alt="Просто скачай Банк" title="Просто скачай Банк"
-                                class=" lazyloaded"
-                                data-src="https://obank.com.ua/sites/default/files/2020/01/main_ukr_0.png">
-                              <noscript>
-                                <img src="/sites/default/files/2020/01/main_ukr_0.png" width="1220" height="1360"
-                                  alt="Просто скачай Банк" title="Просто скачай Банк" />
-                              </noscript>
-
-                            </div>
-                          </div>
-
+                        <div class="block-prostoskachaybank-responsive">
+                          <img src="./O.Bank _ Просто скачай Банк!_files/main_ukr_0.png"
+                          width="250" height="284" alt="Просто скачай Банк" title="Просто скачай Банк"
+                          class=" lazyloaded"
+                          data-src="https://obank.com.ua/sites/default/files/2020/01/main_ukr_0.png">
                         </div>
-
+                        
+                        <div class="field field--name-fake-title field--type-string field--label-hidden field__item">
+                          <h2>| O.Bank - банк твоєї вигоди!</h2>
+                        </div>
                         <div class="layout__region layout__region--second-above">
-
-                          <div class="field field--name-fake-title field--type-string field--label-hidden field__item">
-                            <h2>| Просто скачай <span>Банк</span></h2>
-                          </div>
-
                           <div
                             class="field field--name-field-text field--type-string-long field--label-hidden field__items">
                             <div class="field__item">
@@ -266,12 +252,7 @@
                                       <p class="block-ruby"><img alt="Завантаження" class="qrcode"
                                           data-entity-type="file"
                                           data-entity-uuid="925768b4-6988-4bc5-b657-219f6b910588"
-                                          src="./O.Bank _ Просто скачай Банк!_files/ios_utm_lending.png"></p>
-
-                                      <p class="block-ruby"><a href="https://apple.co/2TibP7Z" target="_blank"><img
-                                            alt="iOs" class="download" data-entity-type="file"
-                                            data-entity-uuid="7ee1086b-c471-400e-97ef-f657cc2e8104"
-                                            src="./O.Bank _ Просто скачай Банк!_files/download-on-the-app-store-apple.png"></a>
+                                          src="./O.Bank _ Просто скачай Банк!_files/ios_utm_lending.png">
                                       </p>
                                     </div>
                                   </div>
@@ -279,22 +260,15 @@
                                 </div>
 
                                 <div class="layout__region layout__region--second-above">
-
                                   <div
                                     class="clearfix text-formatted field field--name-field-right-block-content field--type-text-long field--label-hidden field__item">
                                     <div class="imgand">
                                       <p class="block-ruby"><img alt="Android" class="qrcode" data-entity-type="file"
                                           data-entity-uuid="96dc2682-b28b-41c7-8c3b-1d18c1d39e8e"
-                                          src="./O.Bank _ Просто скачай Банк!_files/android_utm_lending.png"></p>
-
-                                      <p class="block-ruby"><a href="https://bit.ly/2QKdHoA"><img alt="googleplay"
-                                            class="download" data-entity-type="file"
-                                            data-entity-uuid="5ba79301-27f5-4883-9382-4ddf3b4c08b0"
-                                            src="./O.Bank _ Просто скачай Банк!_files/Google_Play_Store_badge_EN.png"></a>
+                                          src="./O.Bank _ Просто скачай Банк!_files/android_utm_lending.png">
                                       </p>
                                     </div>
                                   </div>
-
                                 </div>
 
                                 <div class="layout__region layout__region--middle">
@@ -317,7 +291,22 @@
                             </div>
                           </div>
                         </div>
-
+                        <!-- img -->
+                        <div class="layout__region layout__region--first-above">
+                          <div class="field field--name-field-image field--type-image field--label-hidden field__items">
+                            <div class="field__item"> 
+                              <img src="./O.Bank _ Просто скачай Банк!_files/main_ukr_0.png"
+                                width="1220" height="1360" alt="Просто скачай Банк" title="Просто скачай Банк"
+                                class=" lazyloaded"
+                                data-src="https://obank.com.ua/sites/default/files/2020/01/main_ukr_0.png">
+                              <noscript>
+                                <img src="/sites/default/files/2020/01/main_ukr_0.png" width="1220" height="1360"
+                                  alt="Просто скачай Банк" title="Просто скачай Банк" />
+                              </noscript>
+                            </div>
+                          </div>
+                        </div>
+                        <!-- img -->
                         <div class="layout__region layout__region--middle">
 
                         </div>
